# vql

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/benchmark/lazysql/: README.md
src/tui_client/: app.py
src/tui_client/db/: base.py  config.py  postgres.py
src/tui_client/screens/: confirm_modal.py  connect.py  edit_modal.py  main.py
src/tui_client/widgets/: property_panel.py  result_table.py  schema_tree.py
src/vql/: app.py
src/vql/db/: base.py  config.py
src/vql/screens/: connect.py  edit_modal.py  main.py
src/vql/widgets/: db_header.py  property_panel.py  result_table.py  schema_tree.py  sql_editor.py  sql_history_list.py  tab_bar.py
tests/: test_command_input.py  test_config.py  test_confirm_modal.py  test_db_base.py  test_db_header.py  test_edit_modal.py  test_focus_order.py  test_global_quit.py  test_json_editing.py  test_property_panel.py  test_schema_tree_search.py  test_search.py  test_sql_editor.py  test_sql_history_list.py  test_tab_bar.py  test_tab_switch.py  test_tree_preview.py  test_tree_search_integration.py  test_widgets.py
