[project]
name = "vql"
version = "0.1.0"
description = "Vim風キーバインドを搭載したTUIの軽量DBクライアント"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Shimpei Wakida", email = "shimpei.wakida@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.3.3",
    "textual>=8.1.1",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/wakidas/vql"

[project.scripts]
vql = "vql.app:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
